@@ -6,6 +6,38 @@
 #include "exceptions.h"
 
 namespace torrent {
+  
+BitField::BitField(unsigned int s) :
+  m_size(s) {
+
+  if (s) {
+    int a = ((m_size + 8 * sizeof(int) - 1) / (8 * sizeof(int))) * sizeof(int);
+
+    m_start = new char[a];
+    m_end = m_start + (m_size + 7) / 8;
+    m_pad = m_start + a;
+
+  } else {
+    m_start = m_end = m_pad = NULL;
+  }
+
+  clear();
+}
+
+BitField::BitField(const BitField& bf) :
+  m_size(bf.m_size) {
+
+  if (m_size) {
+    m_start = new char[bf.m_pad - bf.m_start];
+    m_end = m_start + (bf.m_end - bf.m_start);
+    m_pad = m_start + (bf.m_pad - bf.m_start);
+
+    std::memcpy(m_start, bf.m_start, bf.m_pad - bf.m_start);
+
+  } else {
+    m_start = m_end = m_pad = NULL;
+  }
+}
 
 BitField& BitField::operator = (const BitField& bf) {
   if (this == &bf)
@@ -15,16 +47,17 @@ BitField& BitField::operator = (const BitField& bf) {
   
   if (bf.m_size) {
     m_size = bf.m_size;
-    m_start = new int[sizeInts()];
-    m_end = (char*)m_start + bf.sizeBytes();
+    m_start = new char[bf.m_pad - bf.m_start];
+    m_end = m_start + bf.sizeBytes();
+    m_pad = m_start + (bf.m_pad - bf.m_start);
     
-    if (m_start)
-      std::memcpy(m_start, bf.m_start, bf.sizeInts() * sizeof(int));
+    std::memcpy(m_start, bf.m_start, m_pad - m_start);
     
   } else {
     m_size = 0;
     m_start = NULL;
     m_end = NULL;
+    m_pad = NULL;
   }
   
   return *this;
@@ -34,8 +67,8 @@ BitField& BitField::notIn(const BitField& bf) {
   if (m_size != bf.m_size)
     throw internal_error("Tried to do operations between different sized bitfields");
 
-  for (int* i = m_start, *i2 = bf.m_start;
-       i < (int*)m_end; i++, i2++)
+  for (int* i = (int*)m_start, *i2 = (int*)bf.m_start;
+       i < (int*)m_pad; i++, i2++)
     *i &= ~*i2;
 
   return *this;
@@ -45,7 +78,7 @@ bool BitField::zero() const {
   if (m_size == 0)
     return true;
 
-  for (int* i = (int*)m_start; i < (int*)m_end; i++)
+  for (int* i = (int*)m_start; i < (int*)m_pad; i++)
     if (*i)
       return false;
 
@@ -56,20 +89,23 @@ bool BitField::allSet() const {
   if (m_size == 0)
     return false;
 
-  int* i;
+  char* i = m_start;
 
-  for (i = m_start; i + 1 < (int*)m_end; ++i)
-    if (*i != -1)
+  while (i + sizeof(int) < m_pad) {
+    if (*(int*)i != -1)
       return false;
 
-  for (; (char*)i + 1 < m_end; ++(char*)i)
-    if (*(char*)i != -1)
+    i += sizeof(int);
+  }
+
+  while (i + 1 != m_end) {
+    if (*i != (char)-1)
       return false;
 
-  if (m_size % 8)
-    return -1 << (8 - m_size % 8) == *(char*)i;
-  else
-    return *(char*)i == -1;
+    ++i;
+  }
+  
+  return *i == (char)-1 << 7 - (m_size - 1) % 8;
 }
 
 unsigned int BitField::count() const {
